color management is very slow with sequencer sound #98954

Closed
opened 2022-06-17 16:52:47 +02:00 by Vincent Girès · 8 comments

System Information
Operating system: Linux-3.10.0-1160.59.1.el7.x86_64-x86_64-with-glibc2.17 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 2.79 ;)

Short description of error
when sounds are used on the sequencer's timeline: exposure, gamma or curves from color management are slow and get slower and slower as more sound is added.
this become not usable with longer sound file.

image.png

Exact steps for others to reproduce the error
open the file slow_exposure_with_sound.blend, compare speed changing exposure on the scene "scene with sound" and "scene without sound".

**System Information** Operating system: Linux-3.10.0-1160.59.1.el7.x86_64-x86_64-with-glibc2.17 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 2.79 ;) **Short description of error** when sounds are used on the sequencer's timeline: exposure, gamma or curves from color management are slow and get slower and slower as more sound is added. this become not usable with longer sound file. ![image.png](https://archive.blender.org/developer/F13179312/image.png) **Exact steps for others to reproduce the error** open the file [slow_exposure_with_sound.blend](https://archive.blender.org/developer/F13179319/slow_exposure_with_sound.blend), compare speed changing exposure on the scene "scene with sound" and "scene without sound".
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm the issue.

This seems to be caused by BKE_scene_update_sound during dependency graph update. Will check why sound is updated when this property changes.

Can confirm the issue. This seems to be caused by `BKE_scene_update_sound` during dependency graph update. Will check why sound is updated when this property changes.

Looked at history, and there is no explanation why dependency graph update was added. From what I can see it has no value, but I may be mistaken as well. Will have to propose the change and ask for feedback.

Looked at history, and there is no explanation why dependency graph update was added. From what I can see it has no value, but I may be mistaken as well. Will have to propose the change and ask for feedback.
Author

thanks! this is a great feature in our pipeline to be able to quickly set global exposure to our full edit, but since we now use sounds, it's quite hard to use. even with vse channels on which sound strip are on disable still makes the exposure/gamma edit slow.

thanks! this is a great feature in our pipeline to be able to quickly set global exposure to our full edit, but since we now use sounds, it's quite hard to use. even with vse channels on which sound strip are on disable still makes the exposure/gamma edit slow.

This issue was referenced by efc9faef23

This issue was referenced by efc9faef23fdbc3e3eb0d88ed096aa269a294f01

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-08-23 15:09:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98954
No description provided.